// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Content with one column 1`] = `
<div
  className="Container secondary"
  id=""
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(33, 48, 69, 0.65),rgba(33, 48, 69, 0.65)), url(https://s3.amazonaws.com/operationcode-assets/heroBanners/stock_family-2.jpg)",
    }
  }
>
  <div
    className="content"
  >
    
    <div
      className="columnsContainer"
    >
      <div>
        <p>
          Some content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content with three columns 1`] = `
<div
  className="Container secondary"
  id=""
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(33, 48, 69, 0.65),rgba(33, 48, 69, 0.65)), url(https://s3.amazonaws.com/operationcode-assets/heroBanners/stock_family-2.jpg)",
    }
  }
>
  <div
    className="content"
  >
    
    <div
      className="columnsContainer"
    >
      <div>
        <p>
          Some content
        </p>
      </div>
      <div>
        <p>
          Some more content
        </p>
      </div>
      <div>
        <p>
          Even mooooore content.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content with two columns 1`] = `
<div
  className="Container secondary"
  id=""
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(33, 48, 69, 0.65),rgba(33, 48, 69, 0.65)), url(https://s3.amazonaws.com/operationcode-assets/heroBanners/stock_family-2.jpg)",
    }
  }
>
  <div
    className="content"
  >
    
    <div
      className="columnsContainer"
    >
      <div>
        <p>
          Some content
        </p>
      </div>
      <div>
        <p>
          Some more content
        </p>
      </div>
    </div>
  </div>
</div>
`;
